# chest-xray-pneumonia-detection

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.ps1
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  reproduce-table.md
.github/workflows/: ci.yml  nb-clean-check.yml
configs/: base.yaml  baseline.yaml
docs/: paper_mapping.md
kaggle/: push_kernel.sh
notebooks/: README.md  train_baseline.ipynb
src/: __init__.py  config.py  dataset.py  evaluate.py  model.py  train.py  transforms.py  utils.py
src/models/: __init__.py  registry.py  resnet18.py  simple_cnn.py
src/pneumo_snn/: __init__.py
src/pneumo_snn/data/: __init__.py
src/pneumo_snn/interpretability/: __init__.py
src/pneumo_snn/models/: __init__.py
src/pneumo_snn/robustness/: __init__.py
src/pneumo_snn/training/: __init__.py
tests/: test_dataset.py  test_smoke.py
